--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gulp-minify-css": "^1.2.3",
     "gulp-regex-replace": "^0.2.3",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.0",
+    "gulp-rev-collector": "^1.0.5",
     "gulp-ruby-sass": "^2.0.6"
   }
 }
