--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-connect": "^2.3.1",
     "gulp-content-includer": "0.0.7",
     "gulp-minify-css": "^1.2.3",
