--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-connect": "^2.3.1",
     "gulp-content-includer": "0.0.7",
